# 2026-225-vochill-cashflow

./: .env  .env.example  .gitignore  CLAUDE.md  README.md  pyproject.toml
data/: coa.csv
data/config/: cash_flow_categories.yaml  payment_timing.yaml
data/loans/: README.md  example_balloon_loan.yaml  example_equipment_loan.yaml  example_unsecured_term_loan.yaml  stearns_bank_equipment_2025.yaml
database/: EXECUTION_GUIDE.md  bigquery_entity_map.csv  create_financial_tables.sql  execute_ddl.sh  financial_schema_design.md  verify_tables.sh
docs/: BIGQUERY_SCHEMA_SUMMARY.md  FORECAST_ENGINE.md  INITIAL.md  LOANS_LOADED.md  QUESTIONS_ANSWERED.md  SCRATCH.md
docs/hex_app/: HEX_CELL_BY_CELL_GUIDE.md  HEX_PROJECT_STRATEGY.md  HEX_SEMANTIC_MODELS.md  IMPLEMENTATION_CHECKLIST.md  IMPORT_EXPORT.md  READY_TO_BUILD.md  vochill_cash_flow_project.yaml  vochill_cash_flow_starter.ipynb
docs/projectdocs/: ARCHITECTURE.md  DATA_REQUIREMENTS.md  ETL_COMPLETE.md
examples/: 13-week Cash Flow Model.xlsx  amazon_transaction_report_example.txt  shopify_payout_report_example.csv
notebooks/: bigquery_example.py
scripts/: add_loan_schedule.py  build_forecast.py  create_tables.py  etl_deposits_to_cash.py  etl_invoices_to_cash.py  generate_debt_schedule.py  populate_bank_accounts.py  populate_recurring_transactions.py  verify_tables.py
src/: __init__.py  config.py  main.py
src/data/: __init__.py  bigquery_connector.py
src/queries/: cogs_and_fees.sql  consolidated_cash_flow.sql  purchase_commitments.sql  refunds.sql  revenue_by_channel.sql  vendor_payments.sql
(+1 files in other folders)
